<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/food_icon"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@id/imgLogo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/mobile_clip"
        android:drawableLeft="@drawable/mobile_clip"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@id/edtMobileNumber"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/lock_clip"
        android:drawableLeft="@drawable/lock_clip"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/edtPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="#0639A8"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>