<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#ffffff">


    <LinearLayout
        android:id="@+id/llContent1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtSNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".2"
            android:gravity="center"
            android:text="1" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/foodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:text="@string/food_name"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/staticRs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foodName"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="5dp"
                android:text="@string/rs"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/foodName"
                android:layout_marginStart="3dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/staticRs"
                android:text="@string/_200"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="4dp">

                <Button
                    android:id="@+id/btnRemovefromCart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="#075593"
                    android:text="@string/remove"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnAddtoCart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>

