<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rlcart"
    android:layout_height="35dp"
    android:background="#ffffff">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtFoodItem"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_weight="2"
        android:drawableStart="@drawable/dash"
        android:drawablePadding="4dp"
        android:text="@string/food_item"
        android:textColor="#000000"
        android:textSize="20sp" />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/staticRs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerVertical="true"
            android:textColor="#000000"
            android:layout_marginStart="15dp"
            android:text="@string/rs"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtFoodItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/staticRs"
            android:gravity="center"
            android:text="@string/_200"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>
</LinearLayout>
</RelativeLayout>