<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgLogoForgot"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/food_icon"
        />
    <TextView
        android:id="@+id/txtStatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogoForgot"
        android:layout_marginTop="50dp"
        android:text="@string/statement_forgot"
        android:textColor="#ffffff"
        android:layout_marginHorizontal="25dp"
        android:textSize="17sp"/>
    <EditText
        android:id="@+id/edtMobileForgot"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/et_style"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableStart="@drawable/mobile_clip"
        android:drawableLeft="@drawable/mobile_clip"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:layout_below="@id/txtStatement"/>
    <EditText
        android:id="@+id/edtForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/et_style"
        android:layout_below="@id/edtMobileForgot"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_email"
        android:drawableStart="@drawable/email_clip"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:ignore="TextFields"
        android:paddingLeft="10dp"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/edtForgotEmail"
        android:layout_marginTop="25dp"
        android:background="#0639A8"
        android:layout_marginHorizontal="20dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20sp"/>
    <ProgressBar
        android:id="@+id/progressBarForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>