<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MyprofileFragment"
    android:background="@color/colorPrimary">

<ImageView
    android:id="@+id/imgProfilePic"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/ic_person"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp"/>

      <androidx.cardview.widget.CardView
          android:id="@+id/cardName"
          android:layout_width="match_parent"
          android:layout_height="37dp"
          android:layout_below="@id/imgProfilePic"
          android:layout_marginTop="25dp"
          android:layout_marginHorizontal="30dp"
          app:cardCornerRadius="6dp"
          android:background="#fff"
          app:cardElevation="7dp">
        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/name"
            android:textAlignment="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:textSize="18sp"/>
      </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMobile"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@id/cardName"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="6dp"
        android:background="#fff"
        app:cardElevation="7dp">
        <TextView
            android:id="@+id/txtProfileMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mobile"
            android:textAlignment="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardEmail"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@id/cardMobile"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="6dp"
        android:background="#fff"
        app:cardElevation="7dp">
        <TextView
            android:id="@+id/txtProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textAlignment="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddress"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@id/cardEmail"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="6dp"
        android:background="#fff"
        app:cardElevation="7dp">
        <TextView
            android:id="@+id/txtProfileAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textAlignment="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>